# PAC2022-thundersvm

./: CMakeLists.txt  README.md  build_cpu.sh  ylf_CMakeLists.txt
eigen/Eigen/src/Core/: MathFunctions.h
include/thundersvm/: kernelmatrix.h
run/: refer_data1.txt  refer_data2.txt  refer_demo.txt  result.txt  run.sh
src/thundersvm/: kernelmatrix.cpp  ylf_CMakeLists.txt
src/thundersvm/kernel/: kernelmatrix_kernel.cpp  smo_kernel.cpp
src/thundersvm/model/: svc.cpp  svmmodel.cpp
src/thundersvm/solver/: csmBEIFENaaaaa  csmosolver.cpp  csmosolver.ylf
